--- a/index.html
+++ b/index.html
@@ -7,10 +7,14 @@
       name="viewport"
       content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no,viewport-fit=cover"
     />
-    <title>vite-react-h5-template</title>
+    <title>驿宗教</title>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <script src="//cdn.bootcdn.net/ajax/libs/eruda/2.3.3/eruda.js"></script>
+    <script>
+      eruda.init();
+    </script>
   </body>
 </html>
